assets/product-page.css
/* ... */
.sold-out-tag-mobile {
  display: none;
}

.bb-fp__media {
  padding: 40px !important;
  background-color: var(--background_product_card);
  overflow: visible !important;
  border-radius: 10px;
}

.bb-product__title {
    margin: 0;
    padding:0px 0 0 0;
    font-family: Fira Sans;
    font-weight: 700;
  /*  font-size: 28px; */
  }

.bb_select__select {
  font-size: 20px;
  font-weight: 500;
  line-height: 30px;
  font-family: 'Fira Sans';
}
.select:hover.select:after {
  border-radius: inherit !important;
}

*:focus-visible {
  outline: none;
  outline-offset: var(--focused-base-outline-offset);
  box-shadow: none;
}

.bb-pro-drop-svg-wrapper {
  height: 12px !important;
    width: 24px !important;
}

.sold-out-tag-mobile:after {
  bottom: -5px;
  right: -10px;
  background-color: var(--background_product_card);
}

.mobile-view {
  display: none;
}

.desktop-view {
  display: block;
}

@media screen and (max-width: 749px) {
    .bb-product__title {
        margin: 0;
        padding:20px 0 0 0;
        font-family: Fira Sans;
        font-weight: 700;
      /*  font-size: 28px; */
      }
  .product__info-wrapper {
    margin-top: 3rem;
  }
  .product-media-container.constrain-height.media-fit-contain {
    --contained-width: calc(var(--constrained-height) * var(--aspect-ratio));
  }

  #bb_product__media_first {
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
    width: 101.5%;
  }
  .bb-fp__media {
    padding: 20px !important;
  }
  .bb-pmg {
    top: -10px;
  }

  .ticket-line {
    margin-top: 30px;
    justify-content: unset;
    gap: 10px;
  }

  .mobile-view {
    display: block;
  }

  .desktop-view {
    display: none;
  }

  .bb-upper-thumbnail {
    margin-bottom: 0px !important;
    justify-content: space-evenly;
    padding-right: 0rem !important;
    padding-left: 0rem !important;
  }

  .slider.slider--mobile {
    scroll-snap-type: none !important;
    scroll-behavior: unset !important;
    scroll-padding-left: 0rem !important;
    overflow-x: hidden !important;
  }
  .tri-second-0 {
  transform: rotate(270deg) translate(-0%, 30%)
}

.tri-second-1 {
  transform: rotate(270deg) translate(0%, 30%);

}

.tri-second-2 {
  transform: rotate(270deg) translate(0%, 30%);
}

  .bb-price:before {
    transform: translate(-3.3rem, 0.7rem);
  }

  .bb-price:after {
    transform: translate(2.4rem, 0.7rem);
  }

  .quantity {
    min-height: calc((var(--inputs-border-width)* 2) + 3.5rem);
  }

  .bb-special-offer-upper {
    margin-top: 1.5rem;
  }

  .bb_product__media {
    margin-left: 1.5rem;
  }

  .bb-special-offer {
    width: 50%;
  }

  .sold-out-tag-mobile {
    background-color: #e12b56;
    color: #fff;
    width: 32%;
    padding: 6px 2px;
    display: flex;
    transform: translate(-14px, -6px) rotate(-20deg);
    justify-content: center;
    border: none;
  }

  .sold-out-tag {
    display: none;
  }

  .sold-out-tag-mobile::before,
  .sold-out-tag-mobile::after {
    content: '';
    position: absolute;
    width: 16px;
    height: 16px;
    background-color: rgb(var(--color-background));
    border-radius: 50%;
  }

  .sold-out-tag-mobile::before {
    top: -5px;
    left: -10px;
  }


  .sold-out-tag-mobile:after {
    bottom: -5px;
    right: -10px;
    background-color: rgb(var(--color-background));
  }
  #product-upper-bg {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
  }

  .index-product-0 {
    height: 12px !important;
    width: 12px !important;
    transform: translateX(-50%);
  }

  .index-product-18 {
    height: 12px !important;
    width: 12px !important;
    transform: translateX(50%);
  }
}
.bb-product__title {
    margin:0 !important;
    padding:0 !important;
 }

